# docker-bind-init

./: .gitignore  README.md  TODO.md  compose.yml  dockerfile  main.py  pyproject.toml  template.env  tests.compose.yml
docker/: Dockerfile  compose.yml  dockerfile
docker/dev/: dockerfile.dev
exports/: .gitignore
tests/: compose.base.yml  compose.yml
