[tool.poetry]
name = "bind-init"
version = "0.1.0"
description = ""
authors = ["Dean Ayalon <deanayalon@me.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
